[package]
name = "semverator"
version = "0.10.1"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "A command line tool for working with semantic versioning (libpkgx implementation)"
homepage = "https://github.com/jhheider/semverator"
repository = "https://github.com/jhheider/semverator"
keywords = ["semver", "semantic", "versioning", "pkgx"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1.0.99"
clap = { version = '4.5.45', features = ['cargo'] }
libsemverator = { path = "../lib", version = "0.10.1" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
