[package]
name = "semverator"
version = "0.10.1"
edition.workspace = true
license.workspace = true
readme = "../README.md"
description = "A command line tool for working with semantic versioning (libpkgx implementation)"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
libsemverator = { path = "../lib", version = "0.10.2" }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }
