[package]
name = "libsemverator"
version = "0.9.0"
edition = "2021"
license = "Apache-2.0"
readme = "../README.md"
description = "A library for working with semantic versioning (libpkgx implementation)"
homepage = "https://github.com/jhheider/semverator"
repository = "https://github.com/jhheider/semverator"
keywords = ["semver", "semantic", "versioning", "pkgx"]
categories = ["command-line-utilities"]

[features]
serde = ["dep:serde", "dep:serde_json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
anyhow = "1.0.95"
lazy_static = "1.5.0"
regex = "1.9.5"
serde = { version = "1.0.217", optional = true }
serde_json = { version = "1.0.135", optional = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
serde_test = "1.0.177"
