[package]
name = "libsemverator"
version = "0.10.2"
edition.workspace = true
license.workspace = true
readme = "../README.md"
description = "A library for working with semantic versioning (libpkgx implementation)"
homepage.workspace = true
repository.workspace = true
keywords.workspace = true
categories = ["command-line-utilities"]

[features]
serde = ["dep:serde", "dep:serde_json"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
lazy_static = { workspace = true }
regex = { workspace = true }
serde = { workspace = true, optional = true }
serde_json = { workspace = true, optional = true }
thiserror = { workspace = true }

[lints.rust]
unexpected_cfgs = { level = "allow", check-cfg = ['cfg(tarpaulin_include)'] }

[dev-dependencies]
serde_test = { workspace = true }
anyhow = { workspace = true }
